# chipstream

./: .gitignore  Cargo.toml  README.md  fix_state_events.py
crates/soundlog/: CHANGELOG.md  Cargo.toml  README.md
crates/soundlog-debuger/: Cargo.toml  README.md
crates/soundlog-debuger/src/: cui.rs  lib.rs  logger.rs  main.rs  ui.rs
crates/soundlog-debuger/src/cui/: play.rs  redump.rs  test.rs  vgm.rs
crates/soundlog-debuger/src/gui/: hex.rs  state.rs
crates/soundlog-debuger/src/ui/: hex.rs  state.rs
crates/soundlog-tools/: Cargo.toml
crates/soundlog-tools/src/: main.rs  vgm.rs
crates/soundlog/assets/vgm/: REMDME.vgm  ay8910_a4.vgm  gb_dmg_a4.vgm  huc6280_a4.vgm  k051649_a4.vgm  nes_apu_a4.vgm  pokey_a4.vgm  saa1099_a4.vgm  sn76489_a4.vgm  vsu_a4_no_sound.vgm  wonderswan_a4.vgm  y8950_fm_a4.vgm  ym2151_a4.vgm  ym2203_fm_a4.vgm  ym2203_psg_a4.vgm  ym2413_fm_a4.vgm  ym2608_fm_a4.vgm  ym2608_psg_a4.vgm  ym2610b_fm_a4.vgm  ym2610b_psg_a4.vgm  ym2612_a4.vgm  ym3526_fm_a4.vgm  ym3812_fm_a4.vgm  ymf262_fm_a4.vgm  ymf271_fm_a4.vgm  ymf278b_fm_a4.vgm
crates/soundlog/examples/: callback_stream_demo.rs
crates/soundlog/src/: binutil.rs  chip.rs  lib.rs  meta.rs  vgm.rs
crates/soundlog/src/chip/: event.rs  fnumber.rs  spec.rs  state.rs
crates/soundlog/src/vgm/: callback_stream.rs  command.rs  detail.rs  document.rs  header.rs  parser.rs  stream.rs
crates/soundlog/tests/: callback_stream.rs  chip.rs  command.rs  datablock.rs  detail.rs  document.rs  event.rs  fnumber.rs  header.rs  parse.rs  state.rs  stream.rs  vgm.rs
crates/soundlog/tests/event/: ay8910.rs  gamegear.rs  gb_dmg.rs  (+20 more)
(+39 files in other folders)
