[package]
name = "soundlog"
description = "Builder and parser for retro sound-chip register-write logs (VGM)."
version = "0.3.0"
edition = "2024"
license = "MIT"
authors = ["h1romas4 <h1romas4@gmail.com>"]
homepage = "https://github.com/h1romas4"
repository = "https://github.com/h1romas4/chipstream"
readme = "README.md"
keywords = ["vgm", "sound", "audio"]
categories = ["multimedia::audio"]
